# tweepy_scrape

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
tests/: test_tweepy_scrape.py  test_utils.py
twitter_scrape_fedex_case/exporter/: exporter.py  s3.py
twitter_scrape_fedex_case/tweets/: get_tweets.py
twitter_scrape_fedex_case/user/: user_data.py
twitter_scrape_fedex_case/utils/: json_encoder.py
