[tool.poetry]
name = "twitter_scrape_fedex_case"
version = "0.1.0"
description = "Just attached the ability to save tweets directly elsewhere (e.g. S3) based on twitter-scraper."
authors = ["Yeachan", "yeachan153@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"
pre-commit = "^2.7.1"
twitter-scraper = {git = "https://github.com/yeachan153/twitter-scraper.git"}
boto3 = "^1.14.58"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
IPython = "^7.18.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
